# MSET

./: .gitignore  LICENSE
Game/: (管理员运行)刷新http指令.bat  run_db.bat  setting.yaml  start_services.ps1  运行指南.txt
Game/Config/Excel/: ConditionGroupConfigCategory.bytes  LanguageConfigCategory.bytes  NumericConfigCategory.bytes  UnitConfigCategory.bytes
Game/Config/StartConfig/: __导表_起服配置.bat
Game/Excel/: __导表.bat  __导表_生成json(调试用).bat  __生成_数值+常量+多语言定义.bat  luban.conf  使用说明.txt  模板表.xlsx
Game/Excel/Datas/: C.常量表.xlsx  C.错误码表.xlsx  D.多语言表.xlsx  D.定时调度任务.xlsx  J.角色表.xlsx  T.条件组.xlsx  T.条件表.xlsx  __tables__.xlsx
Game/Excel/Defines/: M.枚举定义.xml  T.通用数据结构.xml  自动生成.Numeric.xml
Game/Proto/: gen.bat  模板.proto
Game/Proto/Inner/: DBProxy.proto  Game.proto  Gate.proto  General.proto  ObjectCache.proto
Game/Proto/Outer/: Client.proto  Game.proto  Gate.proto
Game/Robot/: Directory.Build.props  Robot.sln
Game/Robot/Hotfix/: Hotfix.csproj
Game/Robot/Model/: Model.csproj
Game/Robot/Robot/: ConfigLoader.cs  Init.cs  Program.cs  Robot.csproj
Game/Server/: .editorconfig  Directory.Build.props  Server.ndproj  Server.sln  clean_meta.bat
Game/Server/App/: App.csproj  ConfigLoader.cs  Init.cs
Game/Server/Examples/: DBHelperApiExample.cs  DBHelperExtensionsExample.cs  DBProxyAsyncExample.cs
Game/Server/Hotfix/: Hotfix.csproj  Hotfix.csproj.DotSettings
Game/Server/Model/: Model.csproj  Model.csproj.DotSettings
Game/Share/: Directory.Build.props
Game/Share/Libs/Kcp/: CMakeLists.txt  Makefile  ikcp.c
Game/Unity/: Unity.Model.csproj.DotSettings
(+529 files in other folders)
